<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_label" />

        <EditText
            android:id="@+id/download_addr_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="http://192.168.1.243/360.apk" />

        <Button
            android:id="@+id/download_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download" />

        <Button
            android:id="@+id/download_page_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_page" />

        <TextView
            android:id="@+id/result_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</FrameLayout>