<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh" />

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/curNetWorkSSID"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/curNetWorkEvent"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:text="@string/app_name" />
            </LinearLayout>

            <ImageView
                android:id="@+id/curWifiIV"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:contentDescription="@string/app_tools"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/allNetWork"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:cacheColorHint="#00000000"
            android:divider="#19000000"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:smoothScrollbar="true"
            android:text="@string/no_wifi" />
    </LinearLayout>

</FrameLayout>