<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/value_from" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/value_to" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_from"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:ems="10"
                android:inputType="numberDecimal"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:text="%" />

            <EditText
                android:id="@+id/edit_to"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:text="%" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/from_introduce" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0.47"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_weight="0.23"
                android:text="@string/value_equal" />

            <TextView
                android:id="@+id/result_calculate"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="0.44" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.16"
                android:text="%"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/caculate_button"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>