<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/grey"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.71"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/brightness" />

                <Button
                    android:id="@+id/brightness_sub"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <SeekBar
                    android:id="@+id/brightness_seek"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:max="255"
                    android:progress="128" />

                <Button
                    android:id="@+id/brightness_add"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contrast" />

                <Button
                    android:id="@+id/contrast_sub"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <SeekBar
                    android:id="@+id/contrast_seek"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:max="510"
                    android:progress="128" />

                <Button
                    android:id="@+id/contrast_add"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sat_con" />

                <Button
                    android:id="@+id/sat_con_sub"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <SeekBar
                    android:id="@+id/sat_con_seek"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:max="1015"
                    android:progress="128" />

                <Button
                    android:id="@+id/sat_con_add"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sin_hue" />

                <Button
                    android:id="@+id/sin_hue_sub"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <SeekBar
                    android:id="@+id/sin_hue_seek"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:max="511"
                    android:progress="128" />

                <Button
                    android:id="@+id/sin_hue_add"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cos_hue" />

                <Button
                    android:id="@+id/cos_hue_sub"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <SeekBar
                    android:id="@+id/cos_hue_seek"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:max="511"
                    android:progress="128" />

                <Button
                    android:id="@+id/cos_hue_add"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>

            <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset" />

                <Spinner
                    android:id="@+id/fb_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/five_color_h" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>